tests/sksl/errors/golden/GenericArgumentMismatch.glsl
### Compilation failed:

error: 1: no match for sin(1 - int, 2 - int)
error: 2: no match for sin(true - bool)
2 errors
